# weblog

./: .env.sample  .gitignore  Dockerfile  docker-compose.local.infra.yml  docker-compose.yml  flake.nix  shell.nix
api/: Dockerfile  README.md  devshell.sh  pyproject.toml  start.sh  test_lab.py
api/alembic/: env.py
api/alembic/versions/: 12ca2a37c808_author_on_posts.py  7e974818ecdd_post_and_user.py  c8ea76ca9907_add_display_name_to_user_table.py
api/scripts/: create_user.py
api/tests/: db.py
api/weblog/: config.py  main.py  users.py
api/weblog/db/: crud.py  database.py  meta.py  models.py  posts.py  routers.py  schemas.py  users.py
api/weblog/endpoints/: posts.py  users.py
be/: Dockerfile  pyproject.toml
be/tests/: db.py
be/weblog/: main.py
be/weblog/db/: meta.py  models.py
db/: Dockerfile  create_db.sql  dev.sql  run.sh
db/db-seed-files/: dev.sql
fe/: package-lock.json  package.json
fe/src/: App.svelte
fe/src/lib/: posts.js
web/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/src/: app.postcss  basic.test.ts  endpoint.test.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte  Login.svelte
web/src/routes/auth/: +page.server.ts  +page.svelte
web/src/routes/cute/: +layout.svelte  +page.svelte  styles.css
web/src/routes/login/: +page.server.ts  +page.svelte
web/src/routes/write/: +page.svelte  write.test.ts
web/src/stores/: user.ts
