[tool.poetry]
name = "weblog"
version = "0.1.0"
description = ""
authors = ["ahbk <alxhbk@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
asyncpg = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
alembic = "^1.11.1"

[tool.poetry.scripts]
test = "tests.db:run"
weblog = "weblog.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
