[tool.poetry]
name = "weblog"
version = "0.1.0"
description = ""
authors = ["ahbk <alxhbk@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
asyncpg = "^0.28.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
alembic = "^1.11.1"
black = "^23.7.0"
isort = "^5.12.0"
requests = "^2.31.0"
email-validator = "^2.0.0.post2"

[tool.poetry.scripts]
weblog = "weblog.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
